--- a/CSS Tasks/case 2.html
+++ b/CSS Tasks/case 2.html
@@ -16,23 +16,110 @@
 
         }
         header>img{
-            width: 200px;
-            position: absolute;
-            top: 0;
-            left: 20px;
-            bottom: 0;
-            margin: auto;
+           width: 213px;
+            margin: 21px;
 
         }
         header>ul{
             position: absolute;
             right: 30px;
             bottom: 0;
+            font-size: 24px;
             list-style: none;
+            font-family:Cambria;
+            color: dimgray;
         }
-        header>ul>li{
-            display: inline;
+        header > ul > li{
+            padding: 0 10px 0 10px;
+            display: inline-block;
         }
+        header > ul > li:hover{
+            cursor:pointer;
+            color: black;
+
+        }
+        /* header end */
+        body > main{
+            position: relative;
+        }
+
+        main>nav{
+            width: 270px;
+            background-color: rebeccapurple;
+            position: absolute;
+            top:0;
+            bottom: 0;
+            color: white;
+        }
+      main > nav > ul {
+          list-style: none;
+          font-size: 25px;
+          margin-top:39px;
+      }
+      main > nav > ul > li {
+          padding-bottom: 30px;
+          font-family: "Cambria Math";
+      }
+      main > nav > ul > li > a {
+          text-decoration: none;
+          color: white;
+          padding-bottom: 4px;
+          margin-left: 13px;
+
+      }
+      main > nav > ul > li > a:hover {
+          cursor: pointer;
+          color: orange;
+      }
+     main > section {
+         margin-left: 270px;
+         padding: 10px;
+         min-height: 587px;
+     }
+        /*main section content end */
+        main > section > section {
+            height: 300px;
+            position: relative;
+        }
+
+        main > section > section > div {
+            position: absolute;
+            height: 100%;
+            width: calc(100%/3);
+        }
+        main > section > section > div:nth-child(1) {
+            border-right: 5px solid white;
+            left: 0;
+            background-image: url("assets/images/Logo.png");
+            background-size: cover;
+        }
+        main > section > section > div:nth-child(2){
+            border-left: 5px solid white;
+            left: calc(100% / 3);
+            background-image: url("assets/images/Logo.png");
+            background-size:cover ;
+        }
+        main > section > section > div:nth-child(3){
+            border-left: 5px solid white;
+            left: calc(100% / 3 * 2);
+            background-image: url("assets/images/Logo.png");
+            background-size:cover ;
+        }
+        /*main> section content end*/
+        /*main content end*/
+
+        body>footer{
+            height: 60px;
+            background-color: dimgray;
+        }
+        body>footer>p{
+            margin-top: 0;
+            text-align: center;
+            padding: 20px;
+            color: white;
+            font-weight: bold;
+        }
+        /*footer content ended*/
     </style>
 
 </head>
@@ -46,13 +133,14 @@
          <li>About Us</li>
      </ul>
  </header>
-   <main>
+
+    <main>
         <nav>
              <ul>
-                  <li>Home</li>
-                  <li>Service</li>
-                  <li>Contacts</li>
-                  <li>About Us</li>
+                  <li><a href="#"></a> Home</li>
+                  <li><a href="#"></a>Service</li>
+                  <li><a href="#"></a>Contact Us</li>
+                  <li><a href="#"></a>About Us</li>
              </ul>
         </nav>
        <section>
@@ -61,20 +149,72 @@
                  <div></div>
                  <div></div>
             </section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, consequatur cumque enim explicabo facilis ipsum laborum maiores maxime, nesciunt nisi odit, omnis quae quasi quidem quo rerum unde! Aliquid, dolorum?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, debitis deserunt ea earum facilis id labore laboriosam laudantium magni minima non nulla possimus quo quos repellendus sit soluta tempore velit!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aperiam, assumenda aut culpa cupiditate doloribus eos eum, ipsa necessitatibus nesciunt nisi perferendis porro quae reiciendis reprehenderit totam ut veritatis voluptatum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi asperiores debitis dolorem doloribus ea eius fugit harum in inventore ipsum laboriosam molestiae optio porro qui quidem reiciendis vel, voluptas voluptatem?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad, aliquam beatae consequuntur eos facere, minima nisi obcaecati perferendis quas quis quos ratione repellat sapiente sint sit tempora, veritatis voluptate.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A commodi, eveniet itaque iure labore, minus pariatur perspiciatis quae quia reiciendis rem sed voluptate. Eveniet explicabo, hic id molestiae placeat quod?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque doloremque ducimus ex fugiat impedit maxime nisi repellat saepe soluta voluptas? Debitis enim esse illum officiis perferendis rem, sapiente sequi voluptate!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, architecto assumenda expedita magni molestias mollitia non omnis optio perferendis possimus quas, repudiandae suscipit voluptates. Animi dolore impedit omnis quia rem!</p>
+
+
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+           <p>Cum cupiditate fuga fugiat inventore laudantium officiis possimus recusandae similique ut, voluptate! Ad amet
+               asperiores dicta doloribus ducimus exercitationem illo ipsum molestiae, nam nobis officiis provident
+               quibusdam sed suscipit tempore!</p>
+           <p>Ad amet consectetur, cupiditate, dignissimos ipsum, magni modi necessitatibus neque quae quam quia quod
+               suscipit tempore veniam voluptate! Accusamus adipisci aliquam consequuntur et ex, fugiat illo laudantium
+               porro reprehenderit temporibus?</p>
+
 
 
        </section>
    </main>
      <footer>
-         <p>Developed By Mishel Perera</p>
+         <p><small>Developed By Mishel Perera</small></p>
      </footer>
 </body>
 </html>
